// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when limit is exceeded 1`] = `
<View
  style={
    Object {
      "paddingLeft": 4,
      "paddingVertical": 4,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "textAlign": "right",
        },
        undefined,
        Object {
          "color": "red",
          "fontSize": 12,
        },
      ]
    }
  >
    2
     / 
    1
  </Text>
</View>
`;

exports[`renders when limit is set 1`] = `
<View
  style={
    Object {
      "paddingLeft": 4,
      "paddingVertical": 4,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "textAlign": "right",
        },
        undefined,
        Object {
          "color": "blue",
          "fontSize": 12,
        },
      ]
    }
  >
    1
     / 
    1
  </Text>
</View>
`;
